# NewsPage

./: .gitignore  ANN_enriched_test.json  README.MD
NewsPage/: .gitignore  README.md  package-lock.json  package.json
NewsPage/extractor_python/: text_extractor.py  text_extractor.spec
NewsPage/src/: App.css  App.tsx  mock_GUI.tsx
NewsPage/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
NewsPage/src-tauri/capabilities/: default.json
NewsPage/src-tauri/src/: ann_scraper.rs  article_extract.rs  db.rs  id_generator.rs  lib.rs  local_embedding.rs  main.rs  news_item.rs  ollama_read.rs  platform_llm.rs  serp_parser.rs
NewsPage/src-tauri/src/scrapers/: ann.rs  automaton.rs  gl_rss.rs  mod.rs  serp.rs
NewsPage/src/components/: ArticleCard.tsx  ArticleDetailModal.tsx  CalendarModal.tsx  CardContextMenu.tsx  LayoutSwitcher.tsx  LogPanel.tsx  PreferencePanel.tsx  SettingsModal.tsx
NewsPage/src/constants/: news.ts
NewsPage/src/hooks/: useDebouncedSettingSaver.test.ts  useDebouncedSettingSaver.ts  useEnrichedNews.test.ts  useEnrichedNews.ts  useImageFallback.ts
NewsPage/src/types/: news.ts
NewsPage/src/utils/: llmConfig.test.ts  llmConfig.ts  newsMapper.ts  newsMeta.test.ts  newsMeta.ts
newspage_app/: .gitignore  package-lock.json  package.json
newspage_app/src/: App.css  App.tsx  main.tsx
newspage_app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
newspage_app/src-tauri/.cargo/: config.toml
newspage_app/src-tauri/icons/: icon.icns
newspage_app/src-tauri/src/: article.rs  article_extract.rs  db.rs  id_generator.rs  image_search.rs  lib.rs  local_embedding.rs  logging.rs  news_item.rs  platform_llm.rs  proxy.rs  scheduler.rs
newspage_app/src-tauri/src/commands/: feed_commands.rs  llm_commands.rs  mod.rs  news_commands.rs  settings_commands.rs  source_commands.rs
newspage_app/src-tauri/src/repositories/: article_repository.rs  feed_repository.rs  mod.rs  settings_repository.rs
newspage_app/src-tauri/src/scrapers/: ann.rs  automaton.rs  baidu_news.rs  bangumi.rs  custom_rss.rs  gcores.rs  gl_rss.rs  html_to_rss.rs  mod.rs  open_critics.rs  readhub.rs  rss_common.rs  rss_sources.rs  serp.rs  yys.rs  yystv.rs
newspage_app/src/components/: AppSidebar.tsx  ArticleCard.tsx  ArticleDetailModal.tsx  CalendarModal.tsx  CardContextMenu.tsx  CategoryLimitsModal.tsx  ConfigPopupDialog.tsx  CustomRssFeedModal.tsx  CustomSelect.tsx  DotsSpinner.tsx  FeedDeleteConfirmDialog.tsx  FeedManagerPanel.tsx  FeedNavigationList.tsx  LLMProviderSection.tsx  LanguageSwitcher.tsx  LayoutSwitcher.tsx  LogPanel.tsx  NeonCheckbox.tsx  OnboardingGuide.tsx  PreferencePanel.tsx  RssHubSettingsModal.tsx  SavingIndicator.tsx  SettingsModal.tsx  SourceBlacklistModal.tsx  StartupScreen.tsx  UpcomingGameCard.tsx  UpcomingGamesGrid.tsx  VirtualizedArticleList.tsx  WeeklyAnimeCard.tsx  WeeklyAnimeGrid.tsx
newspage_app/src/constants/: article.ts  news.ts
newspage_app/src/containers/: FeedContainer.tsx  NewsContainer.tsx  index.ts
newspage_app/src/contexts/: ThemeContext.tsx  index.ts
newspage_app/src/hooks/: index.ts  useAppStartup.ts  useArticleActions.ts  useArticleFilter.ts  useClampedMenuPosition.ts  useDebouncedSettingSaver.ts  useUIState.ts  (+13 more)
(+37 files in other folders)
