[package]
name = "newspage"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "newspage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.38.0", features = ["full"] }
ollama-rs = { version = "0.2.0", features = ["tokio"] }
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
hf-hub = { version = "0.4", features = ["native-tls"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
open = "5"
trafilatura = "0.3.0"
scraper = "0.26.0"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
urlencoding = "2"

[dev-dependencies]
tauri = { version = "2.0.0", features = ["test"] } # Ensure the version matches your main tauri dependency
